--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <a href="explore.html">Explore</a>
     <a href="courses.html">Courses</a>
     <a href="teach.html">Teach on Udemy</a>
-    <a href="learn.html">My Learning</a>
+    <div class="mylearn"><a href="learn.html">My Learning <div class="learn__popup"><p>You did not purchase anything</p></div></a></div>
     <a href="degree.html">Online Degree</a>
     
     </div>
